--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,3 +75,19 @@
   color: #f9f7f7 !important;
   border-radius: 3px !important;
 }
+
+p {
+  margin-bottom: 2px !important;
+}
+h3 {
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+}
+h4 {
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+}
+h5 {
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+}
