--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -125,6 +125,10 @@ h5 {
 }
 .arrow-text {
   text-anchor: middle;
-  font: size 16px;
+  font-size: 16px;
+  font-family: "Helvetica Neue", Helvetica, Arial sans-serif;
+}
+.scale-text {
+  font-size: 14px;
   font-family: "Helvetica Neue", Helvetica, Arial sans-serif;
 }
