--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -92,14 +92,14 @@ h5 {
   margin-bottom: 5px !important;
 }
 .element-line {
-  stroke-width: 1;
-  stroke: black;
+  stroke-width: 0.8;
+  stroke: rgba(0, 0, 0, 0.5);
 }
 .p_0-element-line {
-  stroke: red;
+  stroke: rgba(255, 0, 0, 0.5);
 }
 .p_1-element-line {
-  stroke: blue;
+  stroke: rgba(0, 0, 255, 0.5);
 }
 .node {
   fill: black;
